# rocket-rogue

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  package-lock.json  package.json  requirements-dev.txt  staticwebapp.config.json
.github/workflows/: azure-static-web-app.yml  native-release.yml
assets/art/: README.md  scene-textures.json
assets/scene-atlas/: README.md  scene-atlas.json
assets/shaders/: rml_ui.frag.glsl  rml_ui.frag.spv  rml_ui.vert.glsl  rml_ui.vert.spv  scene.frag  scene.frag.spv  scene.vert  scene.vert.spv  scene_instance.frag  scene_instance.frag.spv  scene_instance.vert  scene_instance.vert.spv
cmake/: PackageNative.cmake
config/: steam-readiness.json  steam-release-policy.json
docs/: AGENT_DESIGN_CONTEXT.md  ARK_CAMPAIGN_NAVIGATION_PLAN.md  AZURE_STATIC_WEB_APPS.md  CONTROLLER_SUPPORT.md  DESIGN.md  DESKTOP_BUILDS.md  MINING_COMBAT_PROGRESSION.md  MINING_LOCK_AND_KEY_SITES.md  MINING_MINIGAME_PLAN.md  MINI_DRONE_SYSTEM.md  PERFORMANCE_BENCHMARKS.md  POST_ARRIVAL_PHASES.md  README.md  RMLUI_UX_POLISH_GUIDE.md  Rocket_Rogue_Game_Design_Document.docx  STEAM_RELEASE_READINESS.md  VULKAN_MIGRATION_REPORT.md
docs/reference/: ROGUELIKE_OUTLINE.md  ROGUELITE_ELEMENTS.md  USG_NOTES.md
docs/ui-responsive-mockups/: README.md  prompt-manifest.md
licenses/: RocketRogue.txt
scripts/: env-ubuntu.sh  env-windows.ps1  install-ubuntu.sh  install-windows.ps1
src/: main.cpp
src/core/: Content.cpp  Content.h  ContentIds.h  CrewPresentation.h  DetailPresentation.h  FlightProgress.h  GameFormat.h  GameMath.h  GameState.cpp  GameState.h  GameText.h  GameTypes.h  GameUi.h  HangarPresentation.h  InventoryPresentation.h  LaunchBalance.h  LaunchPresentation.h  LaunchReadinessPresentation.h  LaunchSimulation.cpp  LaunchSimulation.h  LaunchStatus.h  MiniDroneCoordination.cpp  Random.cpp  (+23 more)
tests/: app_services_tests.cpp  benchmark_scenario_driver_tests.cpp  controller_input_tests.cpp  core_tests.cpp  frame_capture_tests.cpp  frame_limit_policy_tests.cpp  mining_economy_tests.cpp  mining_progression_tests.cpp  native_benchmark_options_tests.cpp  native_platform_tests.cpp  performance_metrics_tests.cpp  scene_atlas_tests.cpp  scene_composer_tests.cpp  vulkan_policy_tests.cpp
tools/: build-scene-atlas.py  build-scene-atlas.test.py  build-vulkan-shaders.mjs  build-vulkan-shaders.test.mjs  check-platform-boundaries.mjs  import-chroma-sprite.py  prepare-azure-static-web-app.mjs  run-cmake-preset.mjs  run-web-tests.mjs  sanity-check.mjs  serve.mjs  summarize-native-benchmarks.mjs  summarize-native-benchmarks.test.mjs  verify-steam-readiness.mjs  verify-steam-readiness.test.mjs  verify-toolchain.mjs
web/: shell.html
(+65 files in other folders)
